# WeActStudio.STM32WB55CoreBoard

Examples/01-BLE_Test/: .gitignore  CMakeLists.txt  openocd.cfg  stm32wb55xx_flash_cm4.ld
Examples/01-BLE_Test/STM32_WPAN/App/: app_ble.c  p2p_server_app.c
Examples/01-BLE_Test/cmake/stm32cubemx/: CMakeLists.txt
